[uAPI] General documentation fix and improvements needed.
Document query uapi; check and document the behavior for size != 0 but smaller than needed. and fix the behavior and the documentation.; Document the u64 info Key-value;
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
Document query uapi; check and document the behavior for size != 0 but smaller than needed. and fix the behavior and the documentation.; Document the u64 info Key-value;